# SoloMini_CTL

./: BUILD_SUCCESS.md  CMakeLists.txt  DIAGNOSTIC_REPORT.md  PROTOCOL_FIX_SUMMARY.md  QUICKSTART.md  README.md  ROOT_CAUSE_SUMMARY.md  package.xml  test_firmware_check  test_firmware_check.cpp  test_ibus_topics.py  test_raw_protocol.cpp  test_raw_serial.py  test_reads_final.cpp  test_single_read.cpp  test_solo_python.py  test_telemetry_loop.cpp
SampleCode/: SOLOMotorControllersUart.py
config/: dual.yaml  motor1.yaml
documents/: ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  PRD_Motor_Control_ROS2_SOLO_v1.md
include/solo_usb_controller/: dual_track_driver.hpp  dual_track_tui.hpp  solo_driver.hpp  solo_serial.hpp  solo_tui.hpp
rules/: 99-solo.rules
scripts/: build.sh  check_connection.sh  configure_solo.py  configure_solo_auto.py  ibus_speed_bridge.py  install_deps.sh  run_tui.sh  setup_env.sh  setup_udev.sh
src/: debug_protocol.cpp  debug_raw_bytes.cpp  dual_track_driver.cpp  dual_track_tui.cpp  dual_track_tui_main.cpp  ibus_speed_bridge_node.cpp  simple_test_tui.cpp  solo_driver.cpp  solo_serial.cpp  solo_tui.cpp  solo_tui_direct_main.cpp
